--- a/.devcontainer/laravel-6/devcontainer.json
+++ b/.devcontainer/laravel-6/devcontainer.json
@@ -52,7 +52,8 @@
       "yzhang.markdown-all-in-one"
     ]
   },
-  "onCreateCommand":  "sudo apt update && sudo apt install software-properties-common -y && sudo apt install libarchive-tools -y && sudo apt install python2.7 -y && sudo apt install python-pip -y && sudo add-apt-repository ppa:ondrej/php -y && sudo apt update && sudo apt install php7.2 -y && apt-get install php7.2-mysql php7.2-curl php7.2-mbstring php7.2-json php7.2-xml php7.2-bcmath php7.2-ctype php7.2-fileinfo php7.2-pdo php7.2-tokenizer -y && php -r \"copy('https://getcomposer.org/installer', 'composer-setup.php');\" && php composer-setup.php --version=2.0.5 --install-dir=/usr/local/bin --filename=composer && php -r \"unlink('composer-setup.php');\"&& composer global require laravel/installer && composer require --dev phpunit/phpunit ^8.5 && touch ~/.bash_aliases && echo \"alias phpunit='${containerWorkspaceFolder}/vendor/bin/phpunit'\" >> ~/.bashrc && sudo apt -y install gcc g++ make",
+  
+  "onCreateCommand":  "sudo apt update && sudo apt install software-properties-common -y && sudo apt install libarchive-tools -y && sudo apt install python2.7 -y && sudo apt install python-pip -y && sudo add-apt-repository ppa:ondrej/php -y && sudo apt update && sudo apt install php7.2 -y && apt-get install php7.2-mysql php7.2-curl php7.2-mbstring php7.2-json php7.2-xml php7.2-bcmath php7.2-ctype php7.2-fileinfo php7.2-pdo php7.2-tokenizer -y && php -r \"copy('https://getcomposer.org/installer', 'composer-setup.php');\" && php composer-setup.php --version=2.0.5 --install-dir=/usr/local/bin --filename=composer && composer global require laravel/installer && composer require --dev phpunit/phpunit ^8.5 && touch ~/.bash_aliases && echo \"alias phpunit='${containerWorkspaceFolder}/vendor/bin/phpunit'\" >> ~/.bashrc && sudo apt -y install gcc g++ make",
   
   "runArgs": [
     "--name",
