--- a/.devcontainer/laravel-5/devcontainer.json
+++ b/.devcontainer/laravel-5/devcontainer.json
@@ -11,7 +11,9 @@
     }
   },
 
-  "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}/Projects/laravel-5",
+  "workspaceMount": "source=${localWorkspaceFolder}/Projects,target=/workspace,type=bind",
+  "workspaceFolder": "/workspace/laravel-5/",
+ 
 
   "customizations": {
     "vscode": {
